Mon Mar 15 10:14:51 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL::SocketForwarder):
	  add do_not_reverse_lookup.

Sun Mar 14 22:07:38 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_raise): err at unstarted thread.  (PR#1302)

Sat Mar 13 14:56:32 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/ut_drb.rb: use 'druby://localhost:0'. [ruby-dev:23078]

	* test/drb/ut_eval.rb: ditto.

	* test/drb/ut_large.rb: ditto.

	* test/drb/ut_safe1.rb: ditto.

	* test/drb/ut_drb_drbssl.rb: use 'drbssl://localhost:0'.

Fri Mar 12 23:52:56  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch):
	  directory recursion '**/' can be used with File::FNM_PATHNAME.
	  [ruby-dev:22901]

	* dir.c (fnmatch_helper):
	  only '/' is accepted as path separator even in DOSISH environment.
	  [ruby-dev:22974] [ruby-list:39337]

	* dir.c (fnmatch_helper):
	  faster '*' matching.

Fri Mar 12 20:19:16 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_noreturn): default for platforms not support
	  prototypes.

	* ruby.c (ruby_init_loadpath): buffer for path name should have
	  MAXPATHLEN.

	* lib/mkmf.rb (configuration): include topdir and hdrdir in VPATH.

	* lib/mkmf.rb (create_makefile): default dependency rule.

Fri Mar 12 07:35:36 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/config.rb (WEBrick::Config::General): add
	  :DoNotReverseLookup.

	* lib/webrick/server.rb (WEBrick::GenericServer#accept): call
	  do_not_reverse_lookup for each socket if :DoNotReverseLookup
	  is set.  [ruby-code:02357]

Wed Mar 10 22:26:25 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_dir): should handle symlink correctly.
	  This patch is contributed by Christian Loew.  [ruby-talk:94635]

Wed Mar 10 16:28:42 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (return_jump): set return value to the return
	  destination.  separated from localjump_destination().
